--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linuxmuster-base7 (7.0.10-0ubuntu0) lmn7-testing; urgency=low
+
+  * fix example user password.
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Sun, 15 Jul 2018 09:54:30 +0200
+
 linuxmuster-base7 (7.0.9-0ubuntu0) lmn7-testing; urgency=low
 
   * fix, create devices.csv on setup with 15 fields (#26).
