--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 linuxmuster-base7 (7.0.10-0ubuntu0) lmn7-testing; urgency=low
 
   * fix example user password.
+  * removed school.conf template (#33).
 
- -- Thomas Schmitt <thomas@linuxmuster.net>  Sun, 15 Jul 2018 09:54:30 +0200
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Tue, 04 Sep 2018 10:23:27 +0200
 
 linuxmuster-base7 (7.0.9-0ubuntu0) lmn7-testing; urgency=low
 
