--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linuxmuster-base7 (7.0.16-0ubuntu0) lmn7-testing; urgency=low
+
+  * setup: add server entry in devices.csv (#43).
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Fri, 09 Nov 2018 20:40:22 +0100
+
 linuxmuster-base7 (7.0.15-0ubuntu0) lmn7-testing; urgency=low
 
   * postinst: cacert.pem copy fix.
