linuxmuster-import-subnets: fix vanished custom nat rules.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linuxmuster-base7 (7.0.23-0ubuntu0) lmn7-testing; urgency=low
+
+  * linuxmuster-import-subnets: fix vanished custom nat rules.
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Tue, 04 Dec 2018 18:59:00 +0100
+
 linuxmuster-base7 (7.0.22-0ubuntu0) lmn7-testing; urgency=low
 
   * removed windows and linux login script examples (#51).
