--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+linuxmuster-base7 (7.0.26-0ubuntu0) lmn7-testing; urgency=low
+
+  * fixed #20 finally.
+  * minor code cleanup.
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Sat, 12 Jan 2019 12:31:45 +0100
+
 linuxmuster-base7 (7.0.25-0ubuntu0) lmn7-testing; urgency=low
 
   * removed linuxmuster-webui7 reconfigure from setup's z_final.py.
