--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linuxmuster-base7 (7.0.28-0ubuntu0) lmn7-testing; urgency=low
+
+  * fixed space in schoolname cased error on ssl certificate creation (#52, #48).
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Sun, 13 Jan 2019 14:05:20 +0100
+
 linuxmuster-base7 (7.0.27-0ubuntu0) lmn7-testing; urgency=low
 
   * fixed m_firewall.py, readd missing beautifulsoup.
