--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linuxmuster-base7 (7.0.31-0ubuntu0) lmn7-testing; urgency=low
+
+  * Removed idmap entries from smb.conf template (#61).
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Fri, 18 Jan 2019 20:39:46 +0100
+
 linuxmuster-base7 (7.0.30-0ubuntu0) lmn7-testing; urgency=low
 
   * fixed firewall template for noproxy group (#58).
