--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,14 @@
+linuxmuster-base7 (7.0.32-0ubuntu0) lmn7-testing; urgency=low
+
+  * enabling mail service during setup.
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Tue, 12 Mar 2019 18:36:04 +0100
+
 linuxmuster-base7 (7.0.31-0ubuntu0) lmn7-testing; urgency=low
 
   * Removed idmap entries from smb.conf template (#61).
 
- -- Thomas Schmitt <thomas@linuxmuster.net>  Fri, 18 Jan 2019 20:39:46 +0100
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Fri, 08 Feb 2019 16:35:17 +0100
 
 linuxmuster-base7 (7.0.30-0ubuntu0) lmn7-testing; urgency=low
 
