--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,16 @@
+linuxmuster-base7 (7.0.34-0ubuntu0) lmn7-testing; urgency=low
+
+  * fixed interfaces in firewall setup.
+  * removed https portforwarding rule from firewall config template.
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Wed, 20 Mar 2019 15:29:03 +0100
+
 linuxmuster-base7 (7.0.33-0ubuntu0) lmn7-testing; urgency=low
 
   * set ldap server require strong auth = yes in smb.conf template.
+  * added serial console definition to opnsense config template.
 
- -- Thomas Schmitt <thomas@linuxmuster.net>  Tue, 12 Mar 2019 18:36:04 +0100
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Wed, 20 Mar 2019 09:54:43 +0100
 
 linuxmuster-base7 (7.0.32-0ubuntu0) lmn7-testing; urgency=low
 
