--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linuxmuster-base7 (7.0.38-0ubuntu0) lmn7; urgency=low
+
+  * Fix #65: smbclient fails during setup without internet connection.
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Mon, 08 Apr 2019 19:36:21 +0200
+
 linuxmuster-base7 (7.0.37-0ubuntu0) lmn7; urgency=low
 
   * Fix #64: Computer is not a valid role in sophomorix anymore.
