--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,17 @@
+linuxmuster-base7 (7.0.47-0ubuntu0) lmn7; urgency=low
+
+  * Fix #82: During setup schoolname is written by i_samba-provisioning.py to
+    sophomorix' school.conf. Original file is backed up to school.conf.dist.
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Wed, 26 Feb 2020 18:03:58 +0100
+
 linuxmuster-base7 (7.0.46-0ubuntu0) lmn7; urgency=low
 
   * Fix #62: implemented linuxmuster-import-devices post hook scripts. Scripts
     can be placed in /var/lib/linuxmuster/hooks/device-import.post.d. Command's
     output will be printed, return code is ignored.
 
- -- Thomas Schmitt <thomas@linuxmuster.net>  Wed, 26 Feb 2020 14:41:34 +0100
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Wed, 26 Feb 2020 14:44:43 +0100
 
 linuxmuster-base7 (7.0.45-0ubuntu0) lmn7; urgency=low
 
