--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+linuxmuster-base7 (7.0.49-0ubuntu0) lmn7; urgency=low
+
+  * Fix #84: decrease value of credentialsttl to 1 minute in opnsense's web-proxy
+    configuration to make internet blocking of users effective.
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Mon, 02 Mar 2020 14:51:10 +0100
+
 linuxmuster-base7 (7.0.48-0ubuntu0) lmn7; urgency=low
 
   * Remove schoolname handling from i_samba-provisioning.py (reopens #82).
