--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,15 @@
+linuxmuster-base7 (7.0.49-1ubuntu0) lmn7; urgency=low
+
+  * postinst: added firewall ssh connection check.
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Mon, 02 Mar 2020 20:00:48 +0100
+
 linuxmuster-base7 (7.0.49-0ubuntu0) lmn7; urgency=low
 
   * Fix #83: decrease value of credentialsttl to 1 minute in opnsense's web-proxy
     configuration to make internet blocking of users effective.
 
- -- Thomas Schmitt <thomas@linuxmuster.net>  Mon, 02 Mar 2020 15:15:04 +0100
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Thu, 27 Feb 2020 13:05:37 +0100
 
 linuxmuster-base7 (7.0.48-0ubuntu0) lmn7; urgency=low
 
