--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linuxmuster-base7 (7.0.57-0ubuntu0) lmn7; urgency=low
+
+  * fix #91: Group and user isolation for Webui/Sophomorix.
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Wed, 25 Mar 2020 16:18:23 +0100
+
 linuxmuster-base7 (7.0.56-0ubuntu0) lmn7; urgency=low
 
   * merged pr #90 from kiarn.
