--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+linuxmuster-base7 (7.0.60-0ubuntu0) lmn7; urgency=low
+
+  * merged branch import-reworked.
+    - further consolidation of import scripts.
+    - allow public ips in devices.csv.
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Sat, 04 Apr 2020 14:10:25 +0200
+
 linuxmuster-base7 (7.0.59-0ubuntu0) lmn7; urgency=low
 
   * reworked import scripts.
