--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linuxmuster-base7 (7.0.61-0ubuntu0) lmn7; urgency=low
+
+  * added console banner.
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Sun, 05 Apr 2020 16:49:24 +0200
+
 linuxmuster-base7 (7.0.60-0ubuntu0) lmn7; urgency=low
 
   * merged branch import-reworked into master.
