--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,17 @@
+linuxmuster-base7 (7.0.64-1ubuntu0) lmn7; urgency=low
+
+  * Fix #30: manage devices without fixed ip on import.
+  * sambaTool improvements.
+  * permissions improvements.
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Wed, 15 Apr 2020 21:58:27 +0200
+
+linuxmuster-base7 (7.0.63-1ubuntu0) lmn7; urgency=low
+
+  * zshell fix for defaults.sh.
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Wed, 08 Apr 2020 14:44:08 +0200
+
 linuxmuster-base7 (7.0.62-1ubuntu0) lmn7; urgency=low
 
   * renamed manpage file devices.csv.de.5 ->  devices.csv.5.
