--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linuxmuster-base7 (7.0.66-0ubuntu0) lmn7; urgency=low
+
+* events.conf template path fix.
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Thu, 16 Apr 2020 10:32:13 +0200
+
 linuxmuster-base7 (7.0.65-0ubuntu0) lmn7; urgency=low
 
 * merged #94 Allow nested Groups from @mcazautet (smb.conf options).
