--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linuxmuster-base7 (7.0.68-0ubuntu0) lmn7; urgency=low
+
+* performance improvements for dhcṕ-samba-dns-update script.
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Fri, 17 Apr 2020 13:32:56 +0200
+
 linuxmuster-base7 (7.0.67-0ubuntu0) lmn7; urgency=low
 
 * webui-sudoers update.
