--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linuxmuster-base7 (7.0.69-0ubuntu0) lmn7; urgency=low
+
+* fixed getting state of services after restart in import scripts (see #93).
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Sat, 18 Apr 2020 15:22:00 +0200
+
 linuxmuster-base7 (7.0.68-0ubuntu0) lmn7; urgency=low
 
 * performance improvements for dhcṕ-samba-dns-update script.
