--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 linuxmuster-base7 (7.0.72-0ubuntu0) lmn7; urgency=low
 
+  * fix #100: smb.conf faulty.
   * fix #103: import-devices fails in some circumstances when using opsi.
 
  -- Thomas Schmitt <thomas@linuxmuster.net>  Tue, 23 Jun 2020 18:13:49 +0200
