--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linuxmuster-base7 (7.0.73-0ubuntu0) lmn7; urgency=low
+
+  * fix #106: Optimierung des OPNsense Freeradius LDAP Benutzerfilters.
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Wed, 08 Jul 2020 18:19:50 +0200
+
 linuxmuster-base7 (7.0.72-0ubuntu0) lmn7; urgency=low
 
   * fix #100: smb.conf faulty.
