--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linuxmuster-base7 (7.0.75-1ubuntu0) lmn7; urgency=low
+
+  * fixed smb.conf handling during setup in conjunction with #100, #105 and #107.
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Wed, 22 Jul 2020 14:12:50 +0200
+
 linuxmuster-base7 (7.0.75-0ubuntu0) lmn7; urgency=low
 
   * fixed smb.conf handling during setup in conjunction with #100, #105 and #100.
