--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 linuxmuster-base7 (7.0.76-0ubuntu0) lmn7; urgency=low
 
   * added "ntlm auth = mschapv2-and-ntlmv2-only" needed for wpa2 enterprise to smb.conf.
+  * fix  #111: colon is used as a delimiter by python's configparser.
 
- -- Thomas Schmitt <thomas@linuxmuster.net>  Thu, 30 Jul 2020 13:23:00 +0200
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Sat, 15 Aug 2020 19:20:00 +0200
 
 linuxmuster-base7 (7.0.75-1ubuntu0) lmn7; urgency=low
 
