--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,11 @@
 linuxmuster-base7 (7.0.78-0ubuntu0) lmn7; urgency=low
 
-  * final fix #110 (Lac de Narlay version): changed ntp signd socket directory to "/run/samba/ntp_signd".
+  * final fix #110 (Lac de Narlay version): changed ntp signd socket directory
+    to "/run/samba/ntp_signd" using @garblixa's version of ntp.conf.
   * added includefile "/etc/ntp.conf.admin" to "/etc/ntp.conf" for custom settings.
   * added "/etc/ntp.conf.dist" to document default ntp settings.
 
- -- Thomas Schmitt <thomas@linuxmuster.net>  Tue, 18 Aug 2020 15:42:20 +0200
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Tue, 18 Aug 2020 15:54:48 +0200
 
 linuxmuster-base7 (7.0.76-1ubuntu0) lmn7; urgency=low
 
