--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linuxmuster-base7 (7.0.78-1ubuntu0) lmn7; urgency=low
+
+  * rebuild.
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Tue, 18 Aug 2020 16:22:01 +0200
+
 linuxmuster-base7 (7.0.78-0ubuntu0) lmn7; urgency=low
 
   * final fix #110 (Lac de Narlay version): changed ntp signd socket directory
