--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linuxmuster-base7 (7.0.78-2ubuntu0) lmn7; urgency=low
+
+  * postinst fix.
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Tue, 18 Aug 2020 16:42:22 +0200
+
 linuxmuster-base7 (7.0.78-1ubuntu0) lmn7; urgency=low
 
   * rebuild.
