--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linuxmuster-base7 (7.1.1-0ubuntu0) lmn7; urgency=low
+
+  * functions-py: made multischool enhancements.
+
+ -- Andreas Till <andreas.till@netzint.de>  Tue, 14 Sep 2020 17:39:12 +0200
+
 linuxmuster-base7 (7.0.71-0ubuntu0) lmn7; urgency=low
 
   * functions-py: removed verify of ssl certificate from firewallApi(), fixes perhaps #101.
